added functionality to disable textbox on end of quote, success dialog on completion of quote and storage of high scores using localstorage Issues: eventlistener doesn't enabale after being disabled

--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     </head>
     <body>
         <h1 >Typing Game</h1>
-        <p>Practice your typing skills with a quote from Sherlock Holmes. Click **start** to begin!</p>
+        <p>Practice your typing skills with a quote. Click **start** to begin!</p>
         <p id="quote"></p>
         <p id="message"></p>
         <div>
             <input type="text" aria-label="current word" id="typed-value" />
             <button type="button" id="start">Start</button>
         </div>
+        <p id="highscore"></p>
         <script src="script.js"></script>
     </body>
 </html>
