fixed issues and added html meta tags

--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
-<html>
+<html lang="en">
+    <meta content-type="text/html ">
+    <meta x-ua-compatible="IE=edge" charset=utf-8>
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
     <head>
         <title>Typing Game</title>
         <link rel="stylesheet" href="style.css">
